compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__inconsistent_try_5.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "try x = Error(1) Error(\"Not this one\") Error(\"This one\")"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:40
  │
1 │ try x = Error(1) Error("Not this one") Error("This one")
  │                                        ^^^^^^^^^^^^^^^^^

Expected type:

    Result(a, Int)

Found type:

    Result(a, String)


